--- a/src/autohide/_index.scss
+++ b/src/autohide/_index.scss
@@ -3,11 +3,13 @@
 }
 
 @import "common";
-@include Option("userChrome.autohide.tabbar") {
-  @import "tabbar";
-}
-@include Option("userChrome.autohide.navbar") {
-  @import "navbar";
+@include Option("userChrome.autohide.tabbar", "userChrome.autohide.navbar") {
+  @include Option("userChrome.autohide.tabbar", "userChrome.tab.one_liner") {
+    @import "tabbar";
+  }
+  @include Option("userChrome.autohide.navbar", "userChrome.tab.one_liner") {
+    @import "navbar";
+  }
 }
 @include Option("userChrome.autohide.bookmarkbar") {
   @import "bookmarkbar";
