--- a/src/autohide/_tabbar.scss
+++ b/src/autohide/_tabbar.scss
@@ -1,8 +1,3 @@
-#navigator-toolbox:not(:hover) > #titlebar {
-  -moz-window-dragging: no-drag !important;
-  pointer-events: none
-}
-
 :root:not([customizing]) #titlebar {
   margin-bottom: var(--uc-tabbar-hide-height);
   will-change: margin-bottom;
